<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:contentDescription="@string/imagem_alcool_ou_gasolina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center"
        android:text="@string/texto_entrada"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edit_preco_alcool"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:ems="10"
        android:hint="@string/edit_preco_alcool"
        android:inputType="numberDecimal"
        android:autofillHints="Preço álcool ex:1.90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" tools:targetApi="o" />

    <EditText
        android:id="@+id/edit_preco_gasolina"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:ems="10"
        android:hint="@string/edit_preco_gasolina"
        android:inputType="numberDecimal"
        android:autofillHints="Preço gasolina ex:2.90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_preco_alcool" tools:targetApi="o"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:onClick="btCalcular"
        android:text="@string/botao_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_preco_gasolina" />

    <TextView
        android:id="@+id/text_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:text="@string/texto_resultado"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>